packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_call_function_directly_when_lhs_symbol.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: def x = fun()
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = fun()

return exports_TEST_ID_1
