packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_collapse_single_expr_do_block.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: def x = do 5 end
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = 5;


return exports_TEST_ID_1
