packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_emit_table_unpacks_from_function_args.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: "def x = fn({ a, .b }) a + b end"
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = function(tbl_TEST_ID_2)
const a, b = tbl_TEST_ID_2[1], tbl_TEST_ID_2.b;
return (a) + (b)
end

return exports_TEST_ID_1
