packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_not_collapse_multi_expr_do_block.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: def x = do 5 10 end
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = (function() 
return 10
end)()

return exports_TEST_ID_1
