packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_not_collapse_statement_do_block.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: def x = do def y = 5 end
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = (function() const y = 5;

end)();


return exports_TEST_ID_1
