packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_not_simplify_index_when_not_symbol_like.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: "a['0']"
expression: luau_source
---
local exports_TEST_ID_1 = {}

a[`0`]

return exports_TEST_ID_1
