packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_not_simplify_optional_index.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: a?.b.c
expression: luau_source
---
local exports_TEST_ID_1 = {}

((function() local lhs = a; return if lhs == nil then nil else lhs[`b`] end)()).c

return exports_TEST_ID_1
