packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_sanitise_strings.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: "def x = '`\"\\'\\0\\{'"
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = `\`"'\0\{`;


return exports_TEST_ID_1
