packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_simplify_index_when_symbol_like.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: "a.b['c']"
expression: luau_source
---
local exports_TEST_ID_1 = {}

a.b.c

return exports_TEST_ID_1
