packages/moonjuice-transpiler-luau/src/tests/snapshots/moonjuice_transpiler_luau__tests__expressions__tests__should_transpile_if_expression.snap
---
source: packages/moonjuice-transpiler-luau/src/tests/expressions.rs
description: def x = if true then false end
expression: luau_source
---
local exports_TEST_ID_1 = {}

const x = if (true) then
false
else nil


return exports_TEST_ID_1
